// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query component calls the children prop: result in render prop 1`] = `
Object {
  "data": Object {
    "allPeople": Object {
      "people": Array [
        Object {
          "name": "Luke Skywalker",
          Symbol(id): "$ROOT_QUERY.allPeople({\\"first\\":1}).people.0",
        },
      ],
      Symbol(id): "$ROOT_QUERY.allPeople({\\"first\\":1})",
    },
    Symbol(id): "ROOT_QUERY",
  },
  "error": undefined,
  "fetchMore": [Function],
  "loading": false,
  "networkStatus": 7,
  "refetch": [Function],
  "startPolling": [Function],
  "stopPolling": [Function],
  "updateQuery": [Function],
}
`;

exports[`Query component calls the children prop: result in render prop while loading 1`] = `
Object {
  "data": Object {},
  "error": undefined,
  "fetchMore": [Function],
  "loading": true,
  "networkStatus": 1,
  "refetch": [Function],
  "startPolling": [Function],
  "stopPolling": [Function],
  "updateQuery": [Function],
}
`;
